--- a/templates/my_bookings.html
+++ b/templates/my_bookings.html
@@ -12,28 +12,29 @@
     {% if bookings %}
     <table border="1" cellpadding="10">
         <tr>
-            <th>ID</th>
-            <th>Journey</th>
+            <th>#</th>
+            <th>From</th>
+            <th>To</th>
             <th>Date</th>
-            <th>Time</th>
             <th>Seat Type</th>
             <th>Price</th>
             <th>Status</th>
         </tr>
-        {% for b in bookings %}
+        {% for booking in bookings %}
         <tr>
-            <td>{{ b.id }}</td>
-            <td>{{ b.departure_city }} → {{ b.arrival_city }}</td>
-            <td>{{ b.travel_date }}</td>
-            <td>{{ b.departure_time }} → {{ b.arrival_time }}</td>
-            <td>{{ b.seat_type }}</td>
-            <td>£{{ b.final_price }}</td>
+            <td>{{ booking.display_id }}</td>
+            <td>{{ booking.departure_city }}</td>
+            <td>{{ booking.arrival_city }}</td>
+            <td>{{ booking.travel_date }}</td>
+            <td>{{ booking.seat_type }}</td>
+            <td>{{ booking.final_price }}</td>
+            <td>{{ booking.status }}</td>
             <td>
-                {% if b.status == 'paid' %}
-                <form action="{{ url_for('cancel_booking', booking_id=b.id) }}" method="POST"
+                {% if booking.status == 'paid' %}
+                <form action="{{ url_for('cancel_booking', booking_id=booking.booking_id) }}" method="POST"
                     onsubmit="return confirm('Are you sure you want to cancel this booking?');">
                     <button type="submit">Cancel</button>
-                    <button><a href="{{ url_for('update_booking', booking_id=b.id) }}">Update</a></button>
+                    <button><a href="{{ url_for('update_booking', booking_id=booking.booking_id) }}">Update</a></button>
                 </form>
                 {% else %}
                 Cancelled
@@ -45,7 +46,13 @@
     </table>
     {% else %}
     <p>No bookings found.</p>
+    {% endif %} <br><br>
+    {% if bookings|selectattr("status", "equalto", "cancelled")|list %}
+    <form method="POST" action="{{ url_for('clear_cancelled') }}">
+        <button type="submit">Clear Cancelled Bookings</button>
+    </form>
     {% endif %}
+
 </body>
 
 </html>
