--- a/templates/booking.html
+++ b/templates/booking.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    {% include 'navbar.html' %}
     <h2>Make a Booking</h2>
     <form method="POST">
         <label>Travel Date:</label>
