--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   <title>HT Booking</title>
 </head>
 <body>
+  {% include 'navbar.html' %}
   <h1>Welcome to Horizon Travels</h1>
   <a href="/login">Login</a> | <a href="/register">Register</a>
 </body>
