--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="register-page">
+    {% include 'navbar.html' %}
     <h2>Register</h2>
     <form method="POST">
         Name: <input type="text" name="name" required><br>
