--- a/templates/search_book.html
+++ b/templates/search_book.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    {% include 'navbar.html' %}
     <h2>Search Booking by ID</h2>
     <form method="POST">
         <input type="number" name="booking_id" placeholder="Enter Booking ID" required>
