--- a/templates/update_booking.html
+++ b/templates/update_booking.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    {% include 'navbar.html' %}
     <h2>Update Booking #{{ booking.id }}</h2>
     <form method="POST">
         <label>New Travel Date:</label>
