--- a/templates/update_user.html
+++ b/templates/update_user.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    {% include 'navbar.html' %}
     <h2>Update User Password</h2>
     <form method="POST">
         <label>User Email:</label><br>
