--- a/templates/my_bookings.html
+++ b/templates/my_bookings.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    {% include 'navbar.html' %}
     <h2>My Bookings</h2>
     <a href="/dashboard">← Back to Dashboard</a><br><br>
 
